21_K8S/21_5_net_in_k8s_p2/IaC/playbook/files/multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
spec:
  containers:
  - name: multitool
    image: wbitt/network-multitool:latest
    command: ["sleep", "infinity"]
